# alexnet-cnn-training

./: README.md  Topicos1-2026.1-Tarefa3.ipynb  alexnet_model.pth  modelo.pt  pyproject.toml  training_metrics.csv
